Render correct number of visible items on browser load

--- a/example/styles/main.css
+++ b/example/styles/main.css
@@ -6,4 +6,17 @@
 .menu-example li {
     display: inline-block;
     padding: 5px 10px;
+    position: relative;
+}
+
+.menu-example li:hover ul {
+    display: block;
+}
+
+.menu-example ul {
+    display: none;
+    padding: 0;
+    position: absolute;
+    left: 0;
+    width: 200px;
 }
